--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zixi Chen （陈子熙）"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "A Ph.D. student on neural network, soft robot modeling."
   location         : "Pontedera, Pisa, Italy"
   employer         :
