--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,9 @@
 main:
   - title: "Publications"
     url: /publications/
+    
+  - title: "CV"
+    url: /cv/
 
   - title: "Life"
     url: /life/
@@ -18,8 +21,7 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
-#  - title: "CV"
-#    url: /cv/
+
     
 #  - title: "Guide"
 #    url: /markdown/
