--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Life"
-    url: /life/
+  - title: "Leisure time"
+    url: /leisure_time/
 
 #  - title: "Talks"
 #    url: /talks/    
