--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=s78k3cgAAAAJ"
-  email            :
+  email            : <a href="mailto:Zixi.Chen@santannapisa.it">Link text</a>
   researchgate     :  "https://www.researchgate.net/profile/Zixi_Chen11"
   uri              :
   bitbucket        :
