--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=s78k3cgAAAAJ"
-  email            : <a href="mailto:Zixi.Chen@santannapisa.it">Link text</a>
-  researchgate     :  "https://www.researchgate.net/profile/Zixi_Chen11"
+  email            : "mailto:Zixi.Chen@santannapisa.it"
+  researchgate     : "https://www.researchgate.net/profile/Zixi_Chen11"
   uri              :
   bitbucket        :
   codepen          :
