--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zixi Chen （陈子熙）"
   avatar           : "profile.jpg"
-  bio              : "A Ph.D. student on neural network, soft robot modeling."
+  bio              : "A Ph.D. student on neural network and soft robot modeling."
   location         : "Pontedera, Pisa, Italy"
   employer         :
   pubmed           : 
