--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "A Ph.D. student on neural network and soft robot modeling."
   location         : "Pontedera, Pisa, Italy"
-  employer         :
+  employer         : "Scuola Superiore Sant'Anna"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=s78k3cgAAAAJ"
   email            : "Zixi.Chen@santannapisa.it"
