--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-
+  zhihu            : "https://www.zhihu.com/people/chen-zi-xi-84"
 
 # Reading Files
 include:
