--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Zixi Chen （陈子熙）"
 title_separator          : "-"
 name                     : &name "Zixi Chen （陈子熙）"
 description              : &description "A Ph.D. student at Scuola Superiore Sant'Anna"
-url                      : https://zixichen007115.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zixichen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zixichen007115.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
