--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Pontedera, Pisa, Italy"
   employer         : "Scuola Superiore Sant'Anna"
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=s78k3cgAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=s78k3cgAAAAJ&hl=en&oi=ao"
   email            : "Zixi.Chen@santannapisa.it"
   researchgate     : "https://www.researchgate.net/profile/Zixi_Chen11"
   uri              :
