--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/zixi-chen-00b06a1aa/"
+  linkedin         : "zixi-chen-00b06a1aa"
   orcid            : "https://orcid.org/0000-0001-6555-9938"
   pinterest        :
   soundcloud       :
