--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   youtube          :
   wikipedia        :
   zhihu            : "https://www.zhihu.com/people/chen-zi-xi-84"
-  clarivate        : 
+  clarivate        : "https://www.webofscience.com/wos/author/record/39992622"
 
 # Reading Files
 include:
