--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Leisure time"
     url: /leisure_time/
 
-  - title: "IROS 2025 workshop"
-    url: /iros2025ws/
+#  - title: "IROS 2025 workshop"
+#    url: /iros2025ws/
 
 #  - title: "Talks"
 #    url: /talks/    
